test/expected/explain_lb.out
explain long bool x
        ^
9: error: "long bool" is illegal for built-in type
